# ChangeLog for app-misc/uptimed
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/uptimed/ChangeLog,v 1.109 2015/02/24 09:11:49 ago Exp $

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.18.ebuild:
  Stable for alpha, wrt bug #533278

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.18.ebuild:
  Stable for sparc, wrt bug #533278

  01 Jan 2015; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.18.ebuild:
  Stable for ppc64, wrt bug #533278

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.18.ebuild:
  Stable for ppc, wrt bug #533278

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.18.ebuild:
  Stable for x86, wrt bug #533278

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> uptimed-0.3.18.ebuild:
  Stable for amd64, wrt bug #533278

  25 Dec 2014; Lars Wendler <polynomial-c@gentoo.org> files/uptimed.init:
  Make checkpath quiet in init script.

*uptimed-0.3.18 (18 Nov 2014)

  18 Nov 2014; Lars Wendler <polynomial-c@gentoo.org> +uptimed-0.3.18.ebuild:
  Version bump.

  03 Mar 2014; Lars Wendler <polynomial-c@gentoo.org> files/uptimed.init:
  Fixed pidfile location for non-linux systems.

  04 Feb 2014; Lars Wendler <polynomial-c@gentoo.org> files/uptimed.init:
  Fixed pidfile location and removed obsolete code in init script.

*uptimed-0.3.17-r2 (22 Dec 2013)

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> +uptimed-0.3.17-r2.ebuild,
  -uptimed-0.3.17-r1.ebuild:
  Revbump to prevent people from thinking this doesn't install a systemd unit
  file while it does for a long time (#494706 by Roc Valles)

  20 May 2013; Fabio Erculiani <lxnay@gentoo.org> uptimed-0.3.17-r1.ebuild,
  +files/uptimed.service:
  add systemd unit on behalf of the systemd team, fix bug #468898, overriding
  unresponsive maintainer

  29 Apr 2013; Lars Wendler <polynomial-c@gentoo.org>
  -uptimed-0.3.16-r6.ebuild, uptimed-0.3.17-r1.ebuild: